--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+  desc: I am a data scientist with experience in e-commerce, finance, and smart cities. When bugs drive me crazy, you will most likely to catch me wandering on streets, taking random photos  # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
