--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Python, SQL, Spark/Hadoop/MapReduce, HTML/CSS/Javascripts, R, Social Media Analytics, Tableau/Microsoft PowerBI
+aspects: Python, SQL, Spark/Hadoop/MapReduce, HTML/CSS/JS, R, Social Media, Tableau/PowerBI
 percentage: 80, 70, 60, 40, 40, 80, 80
