--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -6,20 +6,20 @@
   i18n: nyc-ped
   gh_user: trang-dam
   repo: hadive
-  img: /static/assets/img/landing/python.png
+  img: /static/assets/img/landing/hadive.png
   desc: We apply Convolutional Neural Network, Faster-RCNN model to pedestrians detection on DOT's camera, achieving 51% accuracy. A crawling tool is built to store number of people on 650 cameras every 1 minute.
 
 - name: Urban Population Prediction
   i18n: urban-pop
   gh_user: trang-dam
   repo: 
-  img: /static/assets/img/landing/jekyll.png
+  img: /static/assets/img/landing/wifi.png
   desc: Predicted population across time and space. The time invariants, spatial characteristics of the areas and the time variants, weather data and day fo the week are our main types of independent variables. based on Wifi user data, provided by Downtown Alliance in New York city. Methods used are Spatio-Temporal Analysis, Decision Tree and Random Forest Regression
   
 - name: Thandos
   i18n: thandos
   url: https://thandos.com/
-  img: /static/assets/img/landing/google.png
+  img: /static/assets/img/landing/thandos.png
   desc: We migrated the website from SquareSpace to Shopify and recommended the two founders a range of actionable marketing strategies to maximize audience engagement and boost the brand awareness.
 
 - name: Hyper-temporal Imaging, An Alternative Technology to Monitor Grid Dynamics
@@ -31,6 +31,6 @@
 
 - name: NYC Starbucks Location Decision Modeling 
   i18n: starbucks
-  url: https://google.com
+  url: https://goo.gl/6tRDyp
   img: /static/assets/img/landing/starbucks.png
-  desc: We determined the best location for Starbucks store in NYC at census tract level, utilizing urban, open data sources. Our main models are Random Forest, Lasso, Ridge Regression. 
+  desc: We determined the best location for Starbucks store in NYC at census tract level, utilizing urban, and open data sources. Our main models are Random Forest, Lasso, Ridge Regression. 
