--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:  # change following line to your infomation.
   facebook_username:  # Leave blank if you don't have now
   twitter_username:  # Leave blank if you don't have now
   email: linhtrangdam@gmail.com  # Leave blank if you don't have now
-  cv:  # A online CV can be printed as PDF, leave blank if you don't have now
+  cv: https://trang-dam.github.io/portfolio/download/Trang Dam_Resume.pdf # A online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
     - name: icon-apache
