--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,8 @@ disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your c
 
 # analytics
 ## google analytics
-ga: UA-106201991-1 # if you wanna this feature, go to https://www.google.com/analytics/ to get your configuration; if not, comment following line.
-  # id:
+ga: # if you wanna this feature, go to https://www.google.com/analytics/ to get your configuration; if not, comment following line.
+  id: UA-106201991-1
 
 ## google optimize
 go:
